Modify JWT ValidAudience and  ValidIssuer to match the actual urls

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,8 +11,8 @@
   },
   "AllowedHosts": "*",
   "JWT": {
-    "ValidAudience": "http://localhost:4200",
-    "ValidIssuer": "http://localhost:5000",
+    "ValidAudience": "https://localhost:4200",
+    "ValidIssuer": "https://localhost:44390",
     "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
   }
 }
